# Student_Performance_Analyzer

./: README.md  app.py  data_generator.py  features.md  pyproject.toml  sample_students.csv
ml_models/: trainer.py
pages/: 1_Dashboard.py  2_Student_Profiles.py  3_Machine_Learning.py  4_Reports.py
utils/: data_processing.py
